# BackendLivrosEbacPython

./: .gitignore  Dockerfile  celery_app.py  docker-compose.yml  kafka_producer.py  livros.db  main.py  pyproject.toml  script.sh  tasks.py
.github/workflows/: python-app.yml
logstash/: logstash.conf
tests/: test_auth.py  test_database.py  test_hello_world.py  test_tasks_celery.py  test_tasks_endpoint.py
