[tool.poetry]
name = "backend-livros-ebac-python"
version = "0.1.0"
description = ""
authors = ["Atilio <atilio.jesus@grupoboticario.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
redis = "^5.2.1"
celery = "^5.5.1"
kafka-python = "^2.1.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--rootdir=."
pythonpath = ["."]

